<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Perfil">

    <Button
            android:text="@string/btnSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSuma"
            android:textSize="14sp"
            android:background="@android:color/transparent"
            android:textColor="@color/purple_3"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toEndOf="@+id/tvBarraLateral"
            app:layout_constraintTop_toTopOf="@+id/tvNivelSuma"
            app:layout_constraintBottom_toBottomOf="@+id/tvNivelSuma"
            android:textAlignment="viewStart"
            android:onClick="suma" />

    <Button
            android:text="@string/btnRest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnResta"
            android:textSize="14sp"
            android:background="@android:color/transparent"
            android:textColor="@color/purple_3"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toEndOf="@+id/tvBarraLateral"
            app:layout_constraintTop_toTopOf="@+id/tvNivelResta"
            app:layout_constraintBottom_toBottomOf="@+id/tvNivelResta"
            android:textAlignment="viewStart" />

    <Button
            android:text="@string/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDivision"
            android:textSize="14sp"
            android:background="@android:color/transparent"
            android:textColor="@color/purple_3"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toEndOf="@+id/tvBarraLateral"
            app:layout_constraintTop_toTopOf="@+id/tvNivelDivision"
            app:layout_constraintBottom_toBottomOf="@+id/tvNivelDivision"
            android:textAlignment="viewStart" />

    <TextView
            android:layout_width="121dp"
            android:layout_height="730dp"
            android:id="@+id/tvBarraLateral"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#F1CFF5" />

    <Button
            android:text="@string/btnMenu"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnMenu_perfil"
            android:drawableTop="@drawable/home"
            android:background="@android:color/transparent"
            android:textSize="19sp"
            android:textColor="@color/purple_3"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@+id/tvBarraLateral"
            android:layout_marginTop="30dp"
            android:onClick="menu" />

    <Button
            android:text="@string/btnPerfil"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnPerfil_perfil"
            android:drawableTop="@drawable/perfil_seleccionado"
            android:background="@android:color/transparent"
            android:textSize="19sp"
            android:textColor="#FF9800"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/btnMenu_perfil"
            android:layout_marginTop="30dp"
            tools:ignore="TextContrastCheck" />

    <Button
            android:text="@string/btnBuzon"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnBuzon_perfil"
            android:drawableTop="@drawable/notificaciones"
            android:background="@android:color/transparent"
            android:textSize="19sp"
            android:textColor="@color/purple_3"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/btnPerfil_perfil"
            android:layout_marginTop="30dp"
            android:onClick="buzon" />

    <Button
            android:text="@string/btnPreguntas"
            android:layout_width="120dp"
            android:layout_height="61dp"
            android:id="@+id/btnPregFreg_perfil"
            android:background="@android:color/transparent"
            android:textColor="@color/purple_3"
            android:textSize="11sp"
            android:textAlignment="inherit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBuzon_perfil"
            android:layout_marginTop="30dp"
            android:onClick="preguntas" />

    <Button
            android:text="@string/btnSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:id="@+id/btnSalir_perfil"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:onClick="salir" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/gato1"
            android:id="@+id/ivAvatar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toEndOf="@+id/tvBarraLateral"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/contAvatar" />

    <TextView
            android:text="@string/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNombre"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/ivAvatar"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toEndOf="@+id/tvBarraLateral"
            android:layout_marginStart="25dp"
            android:textSize="18sp" />

    <EditText
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/etUsername"
            android:ems="10"
            android:id="@+id/etUsername"
            android:textSize="20sp"
            android:layout_marginStart="23dp"
            app:layout_constraintStart_toEndOf="@+id/tvBarraLateral"
            app:layout_constraintTop_toBottomOf="@+id/tvNombre"
            android:textColor="@color/black"
            android:importantForAutofill="no"
            android:hint="@string/etUsername" />

    <TextView
            android:text="@string/tvNivel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNivel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toEndOf="@+id/tvBarraLateral"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            android:textColor="@color/black" />

    <TextView
            android:text="@string/tvExp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvExp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            android:layout_marginStart="56dp"
            app:layout_constraintStart_toEndOf="@+id/tvNumNivelGen"
            android:textColor="@color/black" />

    <TextView
            android:text="@string/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitulo"
            android:textColor="@color/purple_3"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tvBarraLateral"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="47dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNivel" />

    <Button
            android:text="@string/btnMulti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMulti"
            android:textSize="14sp"
            android:background="@android:color/transparent"
            android:textColor="@color/purple_3"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toEndOf="@+id/tvBarraLateral"
            app:layout_constraintTop_toTopOf="@+id/tvNivelMulti"
            app:layout_constraintBottom_toBottomOf="@+id/tvNivelMulti"
            android:textAlignment="viewStart" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/editar_dato"
            android:id="@+id/ivEditarAvatar"
            app:layout_constraintTop_toTopOf="@+id/ivAvatar"
            app:layout_constraintStart_toStartOf="@+id/ivAvatar"
            android:layout_marginTop="76dp"
            android:layout_marginStart="76dp"
            android:contentDescription="@string/contEditAvatar" />

    <TextView
            android:text="@string/tvNivelGral"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvNumNivelGen"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@+id/tvNivel"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/tvNivel"
            android:textColor="@color/black" />

    <TextView
            android:text="@string/tvNivExp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvNumExp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@+id/tvExp"
            app:layout_constraintTop_toTopOf="@+id/tvExp"
            android:textColor="@color/black" />

    <TextView
            android:text="@string/tvNivelSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNivelSuma"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="94dp"
            app:layout_constraintStart_toEndOf="@+id/btnSuma"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <TextView
            android:text="@string/tvNivelRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNivelResta"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="94dp"
            app:layout_constraintStart_toEndOf="@+id/btnResta"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNivelSuma" />

    <TextView
            android:text="@string/tvNivelMul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNivelMulti"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/btnMulti"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNivelResta" />

    <TextView
            android:text="@string/tvNivelDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNivelDivision"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNivelMulti"
            app:layout_constraintStart_toEndOf="@+id/btnDivision"
            android:layout_marginStart="82dp" />

</androidx.constraintlayout.widget.ConstraintLayout>