<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Buzon"
        android:onClick="perfil">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="122dp"
            android:layout_height="783dp"
            android:background="#F1CFF5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/linearLayout">

        <Button
                android:text="@string/btnMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnHome"
                android:drawableTop="@drawable/home"
                android:background="@android:color/transparent"
                android:textColor="@color/purple_3"
                android:onClick="menu" />

        <Button
                android:text="@string/btnPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bntPerfil"
                android:drawableTop="@drawable/perfil"
                android:background="@android:color/transparent"
                android:textColor="@color/purple_3"
                android:padding="15sp"
                android:onClick="perfil" />

        <Button
                android:text="@string/btnBuzon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnBuzon"
                android:drawableTop="@drawable/buzon_seleccionado"
                android:background="@android:color/transparent"
                android:textColor="#FF9800"
                android:padding="15sp" />

        <Button
                android:text="@string/btnPreguntas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnPreguntas"
                android:textSize="11sp"
                android:background="@android:color/transparent"
                android:textColor="@color/purple"
                android:onClick="preguntas" />

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="269dp"
            android:layout_height="783dp"
            android:layout_marginStart="1dp"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="1dp"
            android:padding="30dp">

        <Button
                android:text="De: MatExprés Asunto: Mensaje de bienvenida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnMensaje"
                android:onClick="mensaje" />

        <Button
                android:text="Regresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnRegresar"
                android:textSize="20sp"
                android:layout_marginTop="550dp"
                android:onClick="perfil" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>